# logi-headset

./: .gitignore  42-logitech-hidpp-uaccess.rules  AGENTS.md  README.md  logi-headset-config.desktop  logi-headset.service
daemon/: Cargo.toml
daemon/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
